[package]
name = "elf-sample"
version = "0.0.10"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/cole14/rust-elf/"
repository = "https://github.com/cole14/rust-elf/"
documentation = "http://cole14.github.io/rust-elf/"
description = "A pure-rust library for parsing ELF files"
keywords = ["elf"]
readme = "README.md"

[[bin]]
name = "elfsample"
path = "sample.rs"

[dependencies]
elf = { path = "../" }

[[example]]
name = "sample"
path = "examples/sample.rs"